--- a/docs/p4.AGENT.reqs.md
+++ b/docs/p4.AGENT.reqs.md
@@ -494,6 +494,28 @@ verification:
 traces:
   code: [backend/schemas/agent-schema.json, assembly/agent/contracts.ts (future encode/decode helpers)]
 
+## P4-N10 — ORCHESTRATION
+status: active
+owner: system
+req_type: NON_FUNCTIONAL
+phase: runtime
+area: AGENT.ORCH
+priority: H
+labels: [agent pool, movement, decision making, observation]
+rationale: Test the implementation of all the agent functionality by create a group of agents and having them navigate around a surface of agent tiles and interact with obstacles and each other to create a visual map of a level
+acceptance:
+  - Multiple agenst created.
+  - Static agents created as pooled agents.
+  - Ambulatory agents created as dedicated specialists
+  - Test run across multiple ticks.
+  - Specialist agents move each tick.
+  - Specialist agents observe stamina drain on each movement according to movement type
+  - A visual map is created from the observations of the agent-space as specialists move around the space.
+verification:
+  - integration: run the entire simulation across multiple ticks, ensure all supporting functionality behaves as expected.
+traces:
+  code: []
+
 
 ---
 
